need to filter messages on frontend, no need for backend filtering

--- a/src/components/Chat/Chat.css
+++ b/src/components/Chat/Chat.css
@@ -1,42 +1,18 @@
 .outerContainer {
   display: flex;
-  /* justify-content: center;
-  align-items: center; */
+  justify-content: center;
+  align-items: center; 
   flex-direction:row;
   height: 100vh;
   background-color: #1A1A1D;
+  width:100%
 }
-.chattersList{
-  display:flex;
-  flex-direction:column;
-  background-color:gray;
-}
-#chatter{
-  border-bottom:2px solid red;
-}
+
 .container {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  background: #FFFFFF;
+  background: rgb(195, 198, 214);
   border-radius: 8px;
   height: 60%;
   width: 35%;
-}
-
-@media (min-width: 320px) and (max-width: 480px) {
-  .outerContainer {
-    height: 100%;
-  }
-
-  .container {
-    width: 100%;
-    height: 100%;
-  }
-}
-
-@media (min-width: 480px) and (max-width: 1200px) {
-  .container {
-    width: 60%;
-  }
 }
