display username/course name when searching to chat

--- a/src/components/ClassmatesModal/Classmates.css
+++ b/src/components/ClassmatesModal/Classmates.css
@@ -1,6 +1,12 @@
-.Modal{
+/* .Modal{
     width:30%;
     height:30%;
     display:flex;
     justify-content: center;
 }
+#listItem{
+    width:30%;
+}
+#dialog{
+    width:50%;
+} */
