get/post requests for messages to mongodb (save messages)

--- a/src/components/Input/Input.css
+++ b/src/components/Input/Input.css
@@ -25,3 +25,13 @@ input:focus, textarea:focus, select:focus{
   border: none;
   width: 20%;
 }
+.redSendButton {
+  color: #fff !important;
+  text-transform: uppercase;
+  text-decoration: none;
+  background: red;
+  padding: 20px;
+  display: inline-block;
+  border: none;
+  width: 20%;
+}
