--- a/src/components/Messages/Message/Message.css
+++ b/src/components/Messages/Message/Message.css
@@ -29,8 +29,12 @@
   color: #828282;
   letter-spacing: 0.3px;
 }
+.time{
+  padding-left: 10px;
+}
 .justifyStart {
-  justify-content: flex-start;
+  justify-content: space-between;
+  flex-grow:1
 }
 .justifyEnd {
   justify-content: flex-end;
@@ -46,4 +50,7 @@
 }
 .backgroundLight {
   background: #F3F3F3;
+}
+.dragEnd{
+  flex-grow:1
 }
