--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@ nav{
 }
 body{
   background:white;
+  overflow: auto;
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif
 }
 .nav-links{
