--- a/src/components/Chat/Chat.css
+++ b/src/components/Chat/Chat.css
@@ -1,10 +1,10 @@
 .outerContainer {
   display: flex;
   justify-content: center;
-  align-items: center; 
+  /* align-items: center;  */
   flex-direction:row;
   height: 100vh;
-  background-color: #1A1A1D;
+  /* background-color: #1A1A1D; */
   width:100%
 }
 
@@ -13,6 +13,6 @@
   flex-direction: column;
   background: rgb(195, 198, 214);
   border-radius: 8px;
-  height: 60%;
-  width: 35%;
+  height: 90%;
+  width: 65%;
 }
